rust/transpiler/tests/errors/unclosed_class.hyper
class Card:
    def render(self):
        <div>Card</div>
    end
