rust/transpiler/tests/errors/unclosed_class.expected.err

 file: unclosed_class.hyper:1:1
error: This 'class' block is never closed.
 1 | class Card:
   | ^^^^^^^^^^^ opened here

 help: Close with 'end'

